--- a/Thesis.tex
+++ b/Thesis.tex
@@ -68,7 +68,7 @@
 %-> Backmatter: bibliography, glossary, index
 %-
 \artxifstreq{\artxbib}{bibtex}{% enable bibtex
-    \bibliography{Biblio/ref}% bibliography
+    \bibliography{./kaiti.bib}% bibliography
 }{%
     \printbibliography% bibliography
 }
