--- a/Tex/Frontinfo.tex
+++ b/Tex/Frontinfo.tex
@@ -5,7 +5,7 @@
 %-> 中文封面信息
 %-
 \schoollogo{scale=0.112}{ucas_logo}% 校徽
-\title{中国科学院大学研究生学位论文开题报告}% 题目
+\title{多架构软硬协同二进制翻译的实现和优化}% 题目
 \author{晏悦}% 作者姓名
 \authorid{202128013229037}% 学号
 \advisor{王剑}% 指导老师
