大致完成初稿

--- a/kaiti.bib
+++ b/kaiti.bib
@@ -861,3 +861,12 @@
   urldate = {2023-11-28},
   abstract = {Binary translation is an important step to solve the code migration, QEMU is more advanced and efficient binary translation system. It uses lighter TCG technology to achieve dynamic binary translation but analysis of the TCG internal process, we found that the excessive use of temporary variables meaningless in the TCG intermediate code, the backend generates host code does not take into account the efficient use of registers. Through these two aspects of improvement, especially increased a linear scan register allocation algorithm in the back-end, can be in an acceptable translation time, generates efficient host code. The experimental results show that the optimized program run time significantly reduced and the amount of generated host code reduced by an average of 8\%.}
 }
+
+
+@misc{llvm_project,
+  title={LLVM Project, a collection of modular and reusable compiler and toolchain technologies.},
+  url={https://github.com/llvm/llvm-project},
+  author={LLVM},
+  year={2003},
+  note = "Accessed: 2023-3-30"
+}
