添加摘要，准备上传到sep

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -54,7 +54,7 @@
 %-> 中文封面信息
 %-
 \schoollogo{scale=0.112}{ucas_logo}% 校徽
-\title{多架构软硬协同二进制翻译的实现和优化}% 题目
+\title{多架构软硬件协同二进制翻译器设计}% 题目
 \author{晏悦}% 作者姓名
 \authorid{202128013229037}% 学号
 \advisor{王剑}% 指导老师
@@ -95,6 +95,13 @@
 %---------------------------------------------------------------------------%
 %->> Main content
 %---------------------------------------------------------------------------%
+
+\begin{abstract}
+  本文在已有的一种新型的二进制翻译技术——微译器上，添加RISCV多架构支持，旨在解决多架构之间指令集碎片化和性能瓶颈的问题，并验证微译器对多架构支持的可行性。微译器结合了传统微码缓存和二进制翻译的理念，通过在硬件层面引入翻译缓存和微指令集，以及在软件层面使用静态和动态二进制翻译器，实现了多指令集的共存。同时本文继续优化了微指令集的编码设计和翻译缓存的边界条件设计，提高微译器的性能。
+  
+  微译器通过运行SPEC CPU 2017 和CoreMark程序，在Gem5模拟器中验证其对X86和RISCV多架构支持的有效性。实验结果显示微译器在性能和效果上取得显著的提升，均达到原生程序运行性能的90\%以上，相对于多架构翻译器QEMU20\%的性能，有数倍提升，这为解决多架构环境下的软硬协同问题提供了一种创新的解决方案。
+  \end{abstract}
+  
 
 %---------------------------------------------------------------------------%
 %->> Chapter 1
